fix: overlapping image and text on course card

--- a/src/app/course/course-card/course-card/course-card.component.scss
+++ b/src/app/course/course-card/course-card/course-card.component.scss
@@ -1,5 +1,6 @@
-.card-img {
-  height: 12.5rem;
+.card-img img {
+  height: 25vh;
+  max-height: 25vh;
 }
 
 .card-block {
